# ivv-framework-bci

./: .gitignore  CMakeLists.txt  CMakeLists_Phase1.txt  CMakeLists_full.txt  CONTRIBUTING.md  LICENSE  PROJECT_PLAN.md  README.md  debug_constraint.cpp  requirements.txt  test_fault_injection  test_fault_injection.cpp  test_logger.cpp
.cache/clangd/index/: config_manager.cpp.838DA1ADC7718DA2.idx  config_manager.h.0F0BF6E759117D7A.idx  fault_injector.cpp.9CE74B33D46B0D47.idx  fault_injector.h.8174D7706846D270.idx  logger.cpp.C003DAF4614E0D42.idx  logger.h.E82A5A72EF6CCAD4.idx  qnx_platform.cpp.298A8DDB8BE35EDB.idx  qnx_platform.h.1493E23D6A393A07.idx  safety_monitor.cpp.24EE512BCB2851A3.idx  safety_monitor.h.2293F95C9C0701F8.idx  simple_test_framework.h.CBE68DD18C7152DD.idx  simple_test_runner.cpp.5BAE9CB2038085A8.idx  test_fault_injector_simple.cpp.232C1638EE497EF2.idx  test_timing_analyzer_simple.cpp.2A22E8CD08E394EA.idx  timing_analyzer.cpp.A9DA1581B0BAD658.idx  timing_analyzer.h.567D06C494CB778F.idx  verifier.cpp.1191CB42986C3547.idx  verifier.h.5A711F2EF95564B6.idx
.copilot/: README.md
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
cmake/: IVVFrameworkConfig.cmake.in
docs/: PROJECT_PLAN.md  README.md  TEST_RESULTS.md
scripts/: build.sh  test_orchestrator.py
src/core/: config_manager.cpp  config_manager.h  logger.cpp  logger.h  safety_monitor.cpp  safety_monitor.h  safety_monitor_new.cpp  verifier.cpp  verifier.h
src/fault_injection/: fault_injector.cpp  fault_injector.h
src/qnx_integration/: qnx_platform.cpp  qnx_platform.h
src/timing_analysis/: timing_analyzer.h  timing_analyzer_clean.cpp
tests/: CMakeLists.txt  simple_test_framework.h  simple_test_runner.cpp
tests/fault_injection/: test_fault_injector_simple.cpp
tests/timing_analysis/: test_timing_analyzer_simple.cpp
